--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lion-UI</title>
-  <script src="//at.alicdn.com/t/font_2477975_i4xfjgllqd.js"></script>
+  <link rel="stylesheet" href="//at.alicdn.com/t/font_2477975_i4xfjgllqd.css">
+  <script src="//at.alicdn.com/t/font_2477975_jm2xvrcd4un.js"></script>
 </head>
 
 <body>
