--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="referrer" content="no-referrer" />
   <title>Lion-UI</title>
   <link rel="stylesheet" href="//at.alicdn.com/t/font_2477975_1xwuroqjjol.css">
   <script src="//at.alicdn.com/t/font_2477975_aeuq0gqvnrm.js"></script>
