--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="referrer" content="no-referrer" />
-  <title>Lion-UI</title>
+  <title>Toy-UI</title>
   <link rel="stylesheet" href="//at.alicdn.com/t/font_2477975_2tyg2ba5htv.css">
   <script src="//at.alicdn.com/t/font_2477975_nmddioefwvn.js"></script>
 </head>
