--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="referrer" content="no-referrer" />
   <title>Toy-UI</title>
   <link rel="stylesheet" href="//at.alicdn.com/t/font_2477975_2tyg2ba5htv.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="//at.alicdn.com/t/font_2477975_71yjs58p6ai.js"></script>
 </head>
 
